--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@
     box-sizing: border-box;
     margin: 0;
     padding: 0;
+    font-family: 'Roboto', sans-serif;
 }
 
 .container {
@@ -15,25 +16,77 @@
     padding: 50px 0;
 }
 
+/* -------------BOTTONI------------- */
+.btn {
+    padding: 10px 15px;
+    border-radius: 25px;
+    border: none;
+    cursor: pointer;
+    transition: background-color .15s ease-in-out;
+    font-size: 14px;
+}
+
+.btn-header button {
+    font-size: large;
+}
+
+.btn-light {
+    background-color: white;
+    font-weight: 500;
+}
+
+.btn-light:hover {
+    background-color: #e2e6ea;
+}
+
+.btn-dark {
+    color: white;
+    background-color: #23272a;
+}
+
+.btn-dark:hover {
+    background-color: #424649;
+}
+
 /* ---------------------------------HEADER--------------------------------- */
 
 /* -------------SOPRA------------- */
 
+header {
+    color: white;
+}
+
 .header-top {
-    padding: 17px 0;
-    background-color: #add8e6;
     text-align: center;    
+    background-color: #255ee9;
 }
 
 .nav {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 10px;
+    padding: 20px;
 }
 
 .nav > .nav-links {
     width: 60%;
+    display: flex;
+    justify-content: space-around;
+    padding: 0 12%;
+}
+
+.nav > .nav-links > li {
+    list-style: none;
+}
+
+.nav > .nav-links > li > a {
+    text-decoration: none;
+    color: white;
+}
+
+.nav > .nav-links > li > a:hover {
+    text-decoration: underline;
+    text-decoration-color: white;
 }
 
 .nav > .nav-logo, .nav-login {
@@ -41,16 +94,44 @@
 }
 
 .nav-logo {
-    text-align: left;
+    text-align: center;
+    margin-left: 70px;
 }
 
 .nav-login {
-    text-align: right;
+    text-align: center;
+    margin-right: 70px;
 }
 
 /* -------------SOTTO------------- */
+
+.header-bottom {
+    height: 580px;
+    background-image: url('img/jumbo.png');
+    background-size: cover;
+    background-position: 0 60%;
+}
+
 .header-block {
     width: 70%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    padding-top: 120px;
+    font-size: x-large;
+}
+
+.header-block h1 {
+    letter-spacing: 2px;
+}
+
+.header-block p {
+    margin-top: 30px;
+    margin-bottom: 15px;
+    line-height: 2;
+    font-size: large;
 }
 
 /* ---------------------------------MAIN--------------------------------- */
@@ -106,7 +187,7 @@ footer > section {
 
 /* ------------HEADER------------ */
 
-.debug .nav {
+ .debug .nav {
    background-color: #daa520;
    height: 45px;
    border: 2px dashed black;
